--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,42 @@ body {
   height: 6px;
   left: calc(50% - -12px);
 }
+
+.rainbow-gradient-circle {
+  position: fixed;
+  left: -250px;
+  top: 250px;
+  right: auto;
+  bottom: auto;
+  z-index: -1;
+  width: 500px;
+  height: 500px;
+  border-radius: 1000px;
+  background-image: linear-gradient(45deg, #059dff, #36c6f0);
+  opacity: 0.25;
+  -webkit-filter: blur(100px);
+  filter: blur(100px);
+}
+
+.rainbow-gradient-circle.theme-pink {
+  left: auto;
+  top: -250px;
+  right: -250px;
+  bottom: auto;
+  background-image: linear-gradient(45deg, #fb5343, #ba4a00);
+}
+.rainbow-gradient-circle {
+  position: fixed;
+  left: -250px;
+  top: 250px;
+  right: auto;
+  bottom: auto;
+  z-index: -1;
+  width: 500px;
+  height: 500px;
+  border-radius: 1000px;
+  background-image: linear-gradient(45deg, #059dff, #36c6f0);
+  opacity: 0.25;
+  -webkit-filter: blur(100px);
+  filter: blur(100px);
+}
